Knife Tool not working in 3.6.1 #110931

Closed
opened 2023-08-08 17:42:42 +02:00 by Stephen Burns · 1 comment

System Information
Device name Alienware-Desktop
Processor AMD Ryzen 9 3950X 16-Core Processor 3.49 GHz
Installed RAM 64.0 GB
Device ID 430FDD59-A651-47F2-898A-E92A24D7D3A6
Product ID 00325-80000-00000-AAOEM
System type 64-bit operating system, x64-based processor
Pen and touch Pen and touch support with 10 touch points

Edition Windows 11 Home
Version 23H2
Installed on ‎9/‎28/‎2022
OS build 22631.2129
Experience Windows Feature Experience Pack 1000.22669.1000.0

Blender Version
Version: 3.6.1
Worked: (newest version of Blender that worked as expected)

Short description of error
The Knife tool will not slice faces.

**System Information** Device name Alienware-Desktop Processor AMD Ryzen 9 3950X 16-Core Processor 3.49 GHz Installed RAM 64.0 GB Device ID 430FDD59-A651-47F2-898A-E92A24D7D3A6 Product ID 00325-80000-00000-AAOEM System type 64-bit operating system, x64-based processor Pen and touch Pen and touch support with 10 touch points Edition Windows 11 Home Version 23H2 Installed on ‎9/‎28/‎2022 OS build 22631.2129 Experience Windows Feature Experience Pack 1000.22669.1000.0 **Blender Version** Version: 3.6.1 Worked: (newest version of Blender that worked as expected) **Short description of error** The Knife tool will not slice faces.
Stephen Burns added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-08 17:42:43 +02:00
Germano Cavalcante added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-08-08 20:57:55 +02:00

I can confirm it's worse. Although in earlier versions of Blender the behavior also doesn't look very good either.

But part of the problem is this file. The clip distance value is extreme causing precision problems in the knife tool.

I'm confirming the bug.

I can confirm it's worse. Although in earlier versions of Blender the behavior also doesn't look very good either. But part of the problem is this file. The clip distance value is extreme causing precision problems in the knife tool. I'm confirming the bug.
Germano Cavalcante self-assigned this 2023-08-08 21:40:00 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-08 22:17:06 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110931
No description provided.